bug fix on mobile header

--- a/src/assets/styles/sass_modules/_masthead.scss
+++ b/src/assets/styles/sass_modules/_masthead.scss
@@ -8,7 +8,9 @@ header.masthead {
   margin-top: 60px;
   margin-bottom: 40px;
   @include background-cover;
-
+  @include respond-to(handhelds) {
+    height: 40vh;
+  }
   &.home-page {
     background-size: initial;
     background-size: 40%;
